# synomail

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_bad  Dockerfile_compose  Dockerfile_python  README.md  config.py  out2023_final.csv  pyproject.toml  requirements.txt  requirements.txt.~1~  run_mariadb.sh  run_mariadb_local.sh  start_mariadb.sh  start_mariadb_local.sh  todo.txt
app/: __init__.py  auth.py  mail.py  register.py  syneml.py  todo.txt  tools.py
app/docs/: __init__.py  documentation.py
app/forms/: login.py  note.py
app/models/: __init__.py  file.py  note.py  user.py
app/models/html/: file.py  note.py
app/models/nas/: file.py  nas.py  note.py
app/models/properties/: file.py  note.py  tools.py  user.py
app/register/: __init__.py  edit_note.py  inbox.py  register.py  tools.py
app/templates/: base.html  links.html  links_cl.html  main.html  sidebar.html  upload_file.html  wait.html
migrations/versions/: 17d1945fa422_new.py  18716431d1e3_user_date.py  290afb50c526_local_path_users.py  43e95a778f4b_new.py  711c4b94793f_description.py  8ee0d76d0728_init.py  aeb88ab98caa_permanent.py  b3bf67371096_comments.py  bd079366a90f_path.py  dc45052c30c0_user_date.py  fd58081609f3_new.py  fda0063d6510_order_users.py
migrations_mariadb_local/versions/: d6139b1d0d27_init.py
migrations_mariadb_nas/versions/: 1c14753977f2_init.py  4bd4aeca95e2_init.py  83f76b1612f2_init.py
migrations_mariadb_nas_docker/versions/: 2d317f26d695_init.py  460b2d3bbe5a_init.py  ff94ab4a26fc_init.py
migrations_sqlite/versions/: ecec09260680_init.py  f9a1830391b5_init.py
(+31 files in other folders)
